syntax = "proto3";

package smtl.micro.learn.srv.auth;

service Auth {
	rpc MakeAccessToken (Request) returns (Response) {
	}
	rpc DelUserAccessToken (Request) returns (Response) {
	}
}

message Error {
	int32 code = 1;
	string detail = 2;
}

message Request {
	uint64 userId = 1;
	string userName = 2;
	string token = 3;
}

message Response {
	bool success = 1;
	Error error = 2;
	string token = 3;
}